--- a/package.json
+++ b/package.json
@@ -33,18 +33,22 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
     "eslint-watch": "^3.1.3",
+    "growl": ">=1.10.0",
     "jsdom": "^8.1.0",
-    "mocha": "^2.4.5",
+    "mocha": "^5.2.0",
     "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.6",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "axios": "^0.17.1",
     "babel-preset-stage-1": "^6.1.18",
+    "hoek": ">=5.0.3",
     "jquery": "^3.3.1",
-    "lodash": "^3.10.1",
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.0",
+    "randomatic": ">=3.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
